# agent-hub-graph

./: .editorconfig  .gitattributes  .gitignore  README.md  agent-hub-development-plan.md  agent-hub-task-allocation.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py
adapters/capabilities/: __init__.py  manifest.py  models.py  opencode-manifest.json
app/: __init__.py  __main__.py  api.py  cli.py  config.py  main.py
console/: __init__.py
context/: __init__.py  context_builder.py  planner_bundle.py  task_bundle.py
development-tasks/: claudecode-opus48.md  codex-gpt56.md  hermes-mimo25pro.md  opencode-mimo25pro.md
development-tasks/handoffs/: HUB-130-hermes-prompt.md
development-tasks/next-wave/: HUB-020-hermes.md  HUB-030-opencode.md  HUB-100-codex.md  HUB-120-claudecode.md  HUB-130-hermes.md  (+1 more)
master/: __init__.py  coordinator.py  planner.py  router.py
migrations/: init.sql
protocol/: __init__.py  api.py  change_set.py  common.py  console.py  context.py  event.py  privilege.py  result.py  task.py  workflow.py
scripts/: __init__.py  ci.ps1  ci.sh  generate_openapi.py
security/: __init__.py
storage/: __init__.py  artifact_repository.py  artifact_store.py  db.py  errors.py  event_registry.py  event_repository.py  idempotency_repository.py  leases.py  repositories.py
tests/: conftest.py  test_cli.py  test_config.py  test_fixture_repo.py  test_health.py  test_openapi_draft.py  test_opencode_capability_manifest.py  test_protocol_models.py
web/: __init__.py
workflow/: __init__.py  graph_model.py
workspace/: __init__.py
(+39 files in other folders)
